# thesis

./: .gitmodules  README.md  main.py
GL/: CMakeLists.txt  README.md  main.cpp
GL/src/: CMakeLists.txt  object.cpp  object.h  shader.h  texture.h  view.cpp  view.h
GL/src/algorithms/: CMakeLists.txt  algorithms.h  asap.cpp  common.cpp  halfedge.cpp  minisurface.cpp  normal_gen.cpp  simulation.cpp  texture_gen.cpp
GL/src/gl_egine/: CMakeLists.txt  glegine.cpp
GL/src/gl_egine/include/: gl_egine.h  shader.h  texture.h  vertices.h
GL/src/gl_egine/resources/: fshader.fs
GL/src/resources/shaders/: vshader.vs
